pkgs/drbd9/drbd/.compat_test.6.1.26/blkdev_issue_zeroout_discard.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
In file included from <command-line>:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/blkdev_issue_zeroout_discard.c: In function ‘foo’:
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:357:45: error: call to ‘__compiletime_assert_287’ declared with attribute error: BUILD_BUG_ON failed: !(__same_type(biz_fn, blkdev_issue_zeroout))
  357 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |                                             ^
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:338:25: note: in definition of macro ‘__compiletime_assert’
  338 |                         prefix ## suffix();                             \
      |                         ^~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/compiler_types.h:357:9: note: in expansion of macro ‘_compiletime_assert’
  357 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |         ^~~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:39:37: note: in expansion of macro ‘compiletime_assert’
   39 | #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
      |                                     ^~~~~~~~~~~~~~~~~~
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/build_bug.h:50:9: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
   50 |         BUILD_BUG_ON_MSG(condition, "BUILD_BUG_ON failed: " #condition)
      |         ^~~~~~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/blkdev_issue_zeroout_discard.c:14:9: note: in expansion of macro ‘BUILD_BUG_ON’
   14 |         BUILD_BUG_ON(!(__same_type(biz_fn, blkdev_issue_zeroout)));
      |         ^~~~~~~~~~~~
